--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -18,7 +18,53 @@
  "invalid_birthday_string" : "Das Datumsformat DD/MM/JJJJ wird nicht eingehalten",
  "invalid_password_string" : "mindestens 4 Zeichen",
  "invalid_name_string" : "Dieser Name ist ungültig, keine Zahl",
- "invalid_gender_string" : "Wählen Sie ein Genre"
+ "invalid_gender_string" : "Wählen Sie ein Genre",
+ "hello_string" : "Guten Tag",
+ "welcome_string" : "Willkommen in der Villa",
+ "news_string":"Aktuelles",
+ "villa_is_string":"Der villa ist",
+ "villa_open_string":"Offen",
+ "villa_close_string": "schließen",
+ "logout_string" : "sich abmelden",
+ "fail_scan_message" : "Sie haben nicht den richtigen qr-Code gescannt",
+ "title_fail_scan_string" : "Scan fehlgeschlagen",
+ "closing_scan_title_string" : "Schließen des Scans",
+ "closing_scan_message_string" : "Die Scan-Seite hat sich wegen mangelnder Aktivität geschlossen",
+ "tag_string" : "Tag",
+ "periode_string" : "Zeitraum",
+ "monday_string" : "Montag",
+ "tuesday_string" : "Dienstag",
+ "wednesday_string" :"Mittwoch",
+ "thursday_string" : "Donnerstag",
+ "friday_string" : "Freitag",
+ "infos_hour_string": "Ab 20:45 Uhr Die Villa Ritter ist für Jugendliche ab 15 Jahren reserviert",
+ "hourly_string" : "Stundenplan",
+ "contact_string" : "Kontakt",
+ "address_string" : "Adresse",
+ "select_gallery_string" : "In der Galerie auswählen",
+ "take_photo_string" : "Ein Foto aufnehmen",
+ "delete_photo_string" : "Foto löschen",
+ "cancel_string" : "Abbrechen",
+ "confirm_string" : "Bestätigen",
+ "empty_list_string": "Die Liste leeren",
+ "get_out_string" : "ausgehen lassen",
+ "get_out_all_string" : "Bestätigen Sie den Ausgang für alle",
+ "register_string" : "Angemeldet",
+ "infos_for_string" : "Infos über",
+ "present_string" : "Anwesend",
+ "get_out_one_string" : "Bestätigen Sie die Ausreise von",
+ "arrive_at_men_string" : "Angekommen  in",
+ "arrive_at_wommen_string" : "Angekommen  in",
+ "password_forgot_string" : "Passwort vergessen",
+ "reset_message_1_string" :"Ihnen wurde ein Link zum Zurücksetzen Ihres Passworts zugeschickt",
+ "reset_message_2_string" :"überprüfen Sie Ihren Posteingang",
+ "reset_subtitle_string" : "Setzen Sie Ihr Passwort mithilfe Ihrer E-Mail zurück.",
+ "no_email_exist_string" : "Es wurde kein Konto mit dieser E-Mail erstellt",
+ "enter_email_string" : "Geben Sie Ihre E-Mail-Adresse ein",
+ "send_button_string" : "Senden",
+ "reset_mess_success_string" : "Link zum Zurücksetzen gesendet an ",
+ "sucess_message_string" :"Ein Link zum Zurücksetzen Ihres Passworts wurde an Ihre E-Mail-Adresse gesendet. Überprüfen Sie Ihren Posteingang und sobald Sie das Passwort geändert haben, können Sie sich in die Anwendung einloggen.",
+ "connexion_page_string" :"Anmeldeseite"
 
 }
 
