--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -17,7 +17,52 @@
  "invalid_birthday_string" : "Invalid Birthday",
  "invalid_password_string" : "at least 4 characters",
  "invalid_name_string" : "Invalid name",
- "invalid_gender_string" : "Select gender"
-
-
+ "invalid_gender_string" : "Select gender",
+ "hello_string":"Hello",
+ "welcome_string" : "Welcome to Villa",
+ "news_string":"Lastest News",
+ "villa_is_string" : "The villa is",
+ "villa_open_string":"opens",
+ "villa_close_string": "Closes",
+ "logout_string" : "Logout",
+ "title_fail_scan_string": "Scan Fail",
+ "fail_scan_message":"You did not scan the correct qr code",
+ "closing_scan_title_string" : "Closing the scan",
+ "closing_scan_message_string" : "The scan page has closed due to lack of activity",
+ "tag_string" : "Day",
+ "periode_string" : "Period",
+ "monday_string" : "Monday",
+ "tuesday_string" : "Tuesday",
+ "wednesday_string" :"Wednesday",
+ "thursday_string" : "Thursday",
+ "friday_string" : "Friday",
+ "infos_hour_string" : "From 8:45 p.m. The Villa Ritter is reserved for young people 15 years and older",
+ "address_string" : "Address",
+ "hourly_string" : "Schedule",
+ "contact_string" : "Contact",
+ "select_gallery_string" : "Select from the gallery",
+ "take_photo_string" : "Take a picture",
+ "delete_photo_string" : "Delete photo",
+ "cancel_string" : "Cancel",
+ "confirm_string" : "Confirm",
+ "empty_list_string": "Empty the list",
+ "get_out_string" : "Exit",
+ "get_out_all_string" : "Confirm exit for all",
+ "register_string" : "Registered",
+ "infos_for_string" : "Info on ",
+ "present_string" : "Present",
+ "get_out_one_string" : "Confirm the exit of",
+ "arrive_at_men_string" : "Arrived at",
+ "arrive_at_wommen_string" : "Arrived at",
+ "password_forgot_string" : "Forgot your password",
+ "reset_message_1_string" :"A link has been sent to you to reset your password",
+ "reset_message_2_string" :"check your inbox",
+ "reset_subtitle_string" : "Reset your password with your email",
+ "no_email_exist_string" : "No account was created with this email",
+ "enter_email_string" : "Enter your email address",
+ "send_button_string" : "Send",
+ "reset_mess_success_string" : "Reset link sent to",
+ "sucess_message_string" :"A link to reset your password has been sent to your email. Check your inbox and once the password is changed, you will be able to log in to the application",
+ "connexion_page_string" :"Login page"
+ 
 }
