--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -24,7 +24,7 @@
  "news_string":"Aktuelles",
  "villa_is_string":"Der villa ist",
  "villa_open_string":"Offen",
- "villa_close_string": "schließen",
+ "villa_close_string": "Geschlossen",
  "logout_string" : "sich abmelden",
  "fail_scan_message" : "Sie haben nicht den richtigen qr-Code gescannt",
  "title_fail_scan_string" : "Scan fehlgeschlagen",
@@ -49,7 +49,7 @@
  "empty_list_string": "Die Liste leeren",
  "get_out_string" : "ausgehen lassen",
  "get_out_all_string" : "Bestätigen Sie den Ausgang für alle",
- "register_string" : "Angemeldet",
+ "register_tab_string" : "Angemeldet",
  "infos_for_string" : "Infos über",
  "present_string" : "Anwesend",
  "get_out_one_string" : "Bestätigen Sie die Ausreise von",
