--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -23,7 +23,7 @@
  "news_string":"Lastest News",
  "villa_is_string" : "The villa is",
  "villa_open_string":"opens",
- "villa_close_string": "Closes",
+ "villa_close_string": "Closed",
  "logout_string" : "Logout",
  "title_fail_scan_string": "Scan Fail",
  "fail_scan_message":"You did not scan the correct qr code",
@@ -48,7 +48,7 @@
  "empty_list_string": "Empty the list",
  "get_out_string" : "Exit",
  "get_out_all_string" : "Confirm exit for all",
- "register_string" : "Registered",
+ "register_tab_string" : "Registered",
  "infos_for_string" : "Info on ",
  "present_string" : "Present",
  "get_out_one_string" : "Confirm the exit of",
