--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -9,9 +9,8 @@
  "email_string": "E-mail",
  "gender_string" : "Geschlecht",
  "date_format_string" : "TT/MM/JJJJ",
- "invalid_email_and_password_string": "Falsches Passwort oder falsche E-Mail",
  "birthday_string" : "Geburtsdatum",
- "invalid_email_and_password_string" : "Ungültige Kombination aus Name und Passwort",
+ "invalid_email_and_password_string" : "Ungültige Kombination aus E-Mail und Passwort",
  "non_binary_string" : "Nicht-binär",
  "invalid_email_string" : "Format: Exemple@gmail.com",
  "invalid_locality_string" : "Diese Stadt ist ungültig",
