--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -67,6 +67,8 @@
  "no_internet_string" : "No internet connection found",
  "check_connexion_string" : "Please check your connection",
  "no_internet_dia_string" : "Check your connection",
- "try_again_string" : "Try again"
- 
+ "try_again_string" : "Try again",
+ "delete_my_account_string": "Delete my account",
+ "delete_my_account_confirm_dialog_content": "Are you sure you want to delete your account (this action is irreversible)",
+ "my_account_menu_string": "My profile"
 }
