Ajout majuscule aux phrases manquantes

--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -1,5 +1,5 @@
 {
- "login_string": "sich anmelden",
+ "login_string": "Sich anmelden",
  "register_string": "Neues Konto erstellen",
  "password_string": "Passwort",
  "name_string": "Name",
@@ -15,7 +15,7 @@
  "invalid_email_string" : "Format: Exemple@gmail.com",
  "invalid_locality_string" : "Diese Stadt ist ungültig",
  "invalid_birthday_string" : "Das Datumsformat DD/MM/JJJJ wird nicht eingehalten",
- "invalid_password_string" : "mindestens 4 Zeichen",
+ "invalid_password_string" : "Mindestens 4 Zeichen",
  "invalid_name_string" : "Dieser Name ist ungültig, keine Zahl",
  "invalid_gender_string" : "Wählen Sie ein Genre",
  "hello_string" : "Guten Tag",
@@ -24,7 +24,7 @@
  "villa_is_string":"Der villa ist",
  "villa_open_string":"Offen",
  "villa_close_string": "Geschlossen",
- "logout_string" : "sich abmelden",
+ "logout_string" : "Sich abmelden",
  "fail_scan_message" : "Sie haben nicht den richtigen qr-Code gescannt",
  "title_fail_scan_string" : "Scan fehlgeschlagen",
  "closing_scan_title_string" : "Schließen des Scans",
@@ -46,7 +46,7 @@
  "cancel_string" : "Abbrechen",
  "confirm_string" : "Bestätigen",
  "empty_list_string": "Die Liste leeren",
- "get_out_string" : "ausgehen lassen",
+ "get_out_string" : "Ausgehen lassen",
  "get_out_all_string" : "Bestätigen Sie den Ausgang für alle",
  "register_tab_string" : "Angemeldet",
  "infos_for_string" : "Infos über",
@@ -56,7 +56,7 @@
  "arrive_at_wommen_string" : "Angekommen  in",
  "password_forgot_string" : "Passwort vergessen",
  "reset_message_1_string" :"Ihnen wurde ein Link zum Zurücksetzen Ihres Passworts zugeschickt",
- "reset_message_2_string" :"überprüfen Sie Ihren Posteingang",
+ "reset_message_2_string" :"Überprüfen Sie Ihren Posteingang",
  "reset_subtitle_string" : "Setzen Sie Ihr Passwort mithilfe Ihrer E-Mail zurück.",
  "no_email_exist_string" : "Es wurde kein Konto mit dieser E-Mail erstellt",
  "enter_email_string" : "Geben Sie Ihre E-Mail-Adresse ein",
