--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -15,14 +15,14 @@
  "invalid_email_string" : "Format: Exemple@gmail.com",
  "invalid_locality_string" : "Invalid Locality",
  "invalid_birthday_string" : "Invalid Birthday",
- "invalid_password_string" : "at least 4 characters",
+ "invalid_password_string" : "At least 4 characters",
  "invalid_name_string" : "Invalid name",
  "invalid_gender_string" : "Select gender",
  "hello_string":"Hello",
  "welcome_string" : "Welcome to Villa",
  "news_string":"Lastest News",
  "villa_is_string" : "The villa is",
- "villa_open_string":"opens",
+ "villa_open_string":"Opens",
  "villa_close_string": "Closed",
  "logout_string" : "Logout",
  "title_fail_scan_string": "Scan Fail",
@@ -56,7 +56,7 @@
  "arrive_at_wommen_string" : "Arrived at",
  "password_forgot_string" : "Forgot your password",
  "reset_message_1_string" :"A link has been sent to you to reset your password",
- "reset_message_2_string" :"check your inbox",
+ "reset_message_2_string" :"Check your inbox",
  "reset_subtitle_string" : "Reset your password with your email",
  "no_email_exist_string" : "No account was created with this email",
  "enter_email_string" : "Enter your email address",
