--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -37,7 +37,7 @@
  "thursday_string" : "Donnerstag",
  "friday_string" : "Freitag",
  "infos_hour_string": "Ab 20:45 Uhr Die Villa Ritter ist für Jugendliche ab 15 Jahren reserviert",
- "hourly_string" : "Stundenplan",
+ "hourly_string" : "Zeitplan",
  "contact_string" : "Kontakt",
  "address_string" : "Adresse",
  "select_gallery_string" : "In der Galerie auswählen",
@@ -50,10 +50,10 @@
  "get_out_all_string" : "Bestätigen Sie den Ausgang für alle",
  "register_tab_string" : "Angemeldet",
  "infos_for_string" : "Infos über",
- "present_string" : "Anwesend",
+ "present_string" : "Präsent",
  "get_out_one_string" : "Bestätigen Sie die Ausreise von",
- "arrive_at_men_string" : "Angekommen  in",
- "arrive_at_wommen_string" : "Angekommen  in",
+ "arrive_at_men_string" : "Gekommen in",
+ "arrive_at_wommen_string" : "Gekommen in",
  "password_forgot_string" : "Passwort vergessen",
  "reset_message_1_string" :"Ihnen wurde ein Link zum Zurücksetzen Ihres Passworts zugeschickt",
  "reset_message_2_string" :"Überprüfen Sie Ihren Posteingang",
