--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -21,9 +21,9 @@
  "hello_string" : "Guten Tag",
  "welcome_string" : "Willkommen,",
  "news_string":"Aktuelles",
- "villa_is_string":"Der villa ist",
+ "villa_is_string":"Villa ist",
  "villa_open_string":"Offen",
- "villa_close_string": "Geschlossen",
+ "villa_close_string": "Geschließen",
  "logout_string" : "Sich abmelden",
  "fail_scan_message" : "Sie haben nicht den richtigen qr-Code gescannt",
  "title_fail_scan_string" : "Scan fehlgeschlagen",
