ouverture et fermeture pas admin ok
sortie de tout le monde ok

--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -79,7 +79,8 @@
  "notification_button_string": "Senden",
  "notification_flushbar_title_string": "Achtung !",
  "notification_flushbar_content_string": "Felder dürfen nicht leer sein",
- "force_villa_close_question_string" : "Möchten Sie die Villa schließen ?",
- "force_villa_open_question_string" : "Möchten Sie die Villa öffnen ?"
+ "force_villa_close_question_string" : "Villa schließen",
+ "force_villa_open_question_string" : "Villa öffnen",
+ "default_hour_string" : "Auf Standard zurücksetzen"
 }
 
