--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -79,6 +79,7 @@
  "notification_button_string": "Send",
  "notification_flushbar_title_string": "Attention !",
  "notification_flushbar_content_string": "Fields must not be empty",
- "force_villa_close_question_string" : "Would you like to close the villa ?",
- "force_villa_open_question_string" : "Would you like to open the villa ?"
+ "force_villa_close_question_string" : "Close the villa ?",
+ "force_villa_open_question_string" : "Open the villa ?",
+ "default_hour_string" : "Reset to default"
 }
