--- a/lib/presentation/l10n/app_fr.arb
+++ b/lib/presentation/l10n/app_fr.arb
@@ -319,12 +319,16 @@
     "@notification_flushbar_content_string": {
        "decsription": "Texte pour la flushbar affiché si le contenu de la notification est vide"
     },
-    "force_villa_close_question_string":"Souhaitez-vous fermer la villa ?",
+    "force_villa_close_question_string":"Fermer la villa ?",
     "@force_villa_close_question_string":{
       "description" : "Text pour demander fermer la villa"
     },
-    "force_villa_open_question_string":"Souhaitez-vous ouvrir la villa ?",
+    "force_villa_open_question_string":"Ouvrir la villa ?",
     "@force_villa_open_question_string":{
+      "description" : "Text pour demander ouvrir la villa"
+    },
+   "default_hour_string":"Remettre par défaut?",
+    "@default_hour_string":{
       "description" : "Text pour demander ouvrir la villa"
     }
 }
