Changement traduction gestion des présences

--- a/lib/presentation/l10n/app_de.arb
+++ b/lib/presentation/l10n/app_de.arb
@@ -45,13 +45,14 @@
  "delete_photo_string" : "Foto löschen",
  "cancel_string" : "Abbrechen",
  "confirm_string" : "Bestätigen",
- "empty_list_string": "Die Liste leeren",
- "get_out_string" : "Ausgehen lassen",
- "get_out_all_string" : "Bestätigen Sie den Ausgang für alle",
+ "empty_list_string": "Alle ausführen",
+ "get_out_all_title_string" : "Die Villa schließt",
+ "get_out_one_title_string":"ich sehe nicht",
+ "get_out_all_string" : "Niemand darf mehr in der Villa sein",
  "register_tab_string" : "Angemeldet",
  "infos_for_string" : "Infos über",
  "present_string" : "Präsent",
- "get_out_one_string" : "Bestätigen Sie die Ausreise von",
+ "get_out_one_string" : "ist nicht mehr in der Villa",
  "arrive_at_men_string" : "Gekommen in",
  "arrive_at_wommen_string" : "Gekommen in",
  "password_forgot_string" : "Passwort vergessen",
