--- a/lib/presentation/l10n/app_en.arb
+++ b/lib/presentation/l10n/app_en.arb
@@ -45,13 +45,14 @@
  "delete_photo_string" : "Delete photo",
  "cancel_string" : "Cancel",
  "confirm_string" : "Confirm",
- "empty_list_string": "Empty the list",
- "get_out_string" : "Exit",
- "get_out_all_string" : "Confirm exit for all",
+ "empty_list_string": "Get everyone out",
+ "get_out_all_title_string" : "The Villa closes",
+ "get_out_one_title_string" : "I don't see",
+ "get_out_all_string" : "No one should be in the villa anymore",
+ "get_out_one_string" : "is no longer in the Villa",
  "register_tab_string" : "Registered",
  "infos_for_string" : "Info on ",
  "present_string" : "Present",
- "get_out_one_string" : "Confirm the exit of",
  "arrive_at_men_string" : "Arrived at",
  "arrive_at_wommen_string" : "Arrived at",
  "password_forgot_string" : "Forgot your password",
